cmake_minimum_required(VERSION 3.13)

project(TYPE90)

set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++14)
add_executable(type001 T001.cpp)
add_executable(type002 T002.cpp)
add_executable(type003 T003.cpp)
add_executable(type004 T004.cpp)
add_executable(type006 T006.cpp)
add_executable(type007 T007.cpp)
add_executable(type008 T008.cpp)
add_executable(type009 T009.cpp)
add_executable(type010 T010.cpp)
add_executable(type011_1 T011_1.cpp)
add_executable(type011_2 T011_2.cpp)
add_executable(type012 T012.cpp)
add_executable(type013 T013.cpp)
