cmake_minimum_required(VERSION 3.13)

project(TYPE90)

set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++14)
include_directories("../include")
add_executable(type001 T001.cpp)
add_executable(type002 T002.cpp)
add_executable(type003 T003.cpp)
add_executable(type004 T004.cpp)
add_executable(type006 T006.cpp)
add_executable(type007 T007.cpp)
add_executable(type008 T008.cpp)
add_executable(type009 T009.cpp)
add_executable(type010 T010.cpp)
add_executable(type011_1 T011_1.cpp)
add_executable(type011_2 T011_2.cpp)
add_executable(type012 T012.cpp)
add_executable(type013 T013.cpp)
add_executable(type014 T014.cpp)
add_executable(type016 T016.cpp)
add_executable(type018 T018.cpp)
add_executable(type020 T020.cpp)
add_executable(type022 T022.cpp)
add_executable(type024 T024.cpp)
add_executable(type026 T026.cpp)
add_executable(type027 T027.cpp)
add_executable(type028 T028.cpp)
add_executable(type032_1 T032_1.cpp)
add_executable(type032_2 T032_2.cpp)
add_executable(type033 T033.cpp)
add_executable(type034 T034.cpp)
add_executable(type038 T038.cpp)
add_executable(type042 T042.cpp)
add_executable(type043 T043.cpp)
add_executable(type044 T044.cpp)
add_executable(type046 T046.cpp)
add_executable(type048 T048.cpp)
add_executable(type050 T050.cpp)
add_executable(type052 T052.cpp)
add_executable(type055 T055.cpp)
add_executable(type058 T058.cpp)
add_executable(type061 T061.cpp)
add_executable(type063 T063.cpp)
add_executable(type064 T064.cpp)
add_executable(type067 T067.cpp)
add_executable(type069 T069.cpp)
add_executable(type070 T070.cpp)
add_executable(type072 T072.cpp)
add_executable(type075 T075.cpp)
add_executable(type076 T076.cpp)
add_executable(type078 T078.cpp)
add_executable(type079 T079.cpp)
add_executable(type082 T082.cpp)
